# YAMDOG

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  dependencies_dev.txt  package.py  pyproject.toml  readme.py  setup.py  tox.ini
.github/workflows/: publish_candidate.yaml  publish_main.yaml  tests.yaml
.readme/: .changelog.md
YAMDOG/: API.py  __init__.py
dependencies/: build.txt  dev.txt  requirements_build.txt  requirements_test.txt  requirements_test_functional.txt
readme/: .changelog.md  examples.py  readme.py
src/yamdog/: API.py  _API.py  __init__.py  dataclass_validate.py
tests/: API.py  MANIFEST.in  _API.py  __main__.py  _compare.py  _performance.py  _performance_setup.py  benchmarking.py  benchmarking.yaml  compare.py  mypy.ini  setup.py
tests/unittests/: pytest.ini  test_auxiliaries.py  test_auxiliary.py  test_dataclass_validate.py  test_main.py  test_public.py
