[build-system]
requires = [
    "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "yamdog"
version = "0.4.0.14"
description = "Yet Another Markdown Only Generator"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]
authors = [
    { name = "Limespy" },
]

[project.license]
text = "MIT License"

[project.urls]
Homepage = "https://github.com/Limespy/yamdog"
Changelog = "https://github.com/Limespy/yamdog/blob/main/README.md#Changelog"
"Issue Tracker" = "https://github.com/Limespy/yamdog/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["dependencies.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = "dependencies_dev.txt"}
